--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -142,6 +142,7 @@
 			
 			display: none;
 			background: $bgColor;
+			font-size: 12px;
 			color: $white;
 			padding: 10px;
 			border-radius: 5px;
