--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -90,6 +90,12 @@
 				i {
 					margin-right: 10px;
 				}
+
+				&.prompt {
+					background: darken($color-background-main, 10%);
+					margin: 10px -10px;
+					padding: 10px;
+				}
 			}
 
 			&.active {
