--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -14,6 +14,12 @@
 	width: 100%;
 	margin-top: 20px;
 
+	tr:hover {
+		td {
+			background: $gray97;
+		}
+	}
+
 	th, td {
 		text-align: left;
 		border-bottom: 1px solid $gray86;
