Button and thumbnail alignment imgbank

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -233,6 +233,11 @@ li.react-autosuggest__suggestion--focused {
 	}
 }
 
+.bank-img-thumbnail-container {
+	display: inline-block;
+	margin-right: 20px;
+}
+
 .file-input-input {
 	display: inline-block;
 	vertical-align: bottom;
