--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -61,7 +61,7 @@
 			.record-actions-group {
 				display: none;
 				background: $color-background-main;
-				padding: 5px 10px;
+				padding: 5px 0;
 
 				position: absolute;
 					top: 40px;
@@ -87,11 +87,15 @@
 
 			.record-action {
 				display: block;
-				padding: 5px 0px;
+				padding: 5px 10px;
 
 				text-decoration: none;
 				color: $color-text-primary;
 				cursor: pointer;
+
+				&:hover {
+					background: rgba(0,0,0,0.05);
+				}
 
 				i {
 					margin-right: 10px;
