--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,7 +42,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 //warning quand le record est trop vieux dans LoadedRecords
 .warn {
-	color:red;
+	color:$color-warn-primary;
 }
 
 //autocomplete, voir https://github.com/moroshko/react-autosuggest#themeProp pour le schema
