--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -4,6 +4,10 @@
 	margin-left: auto;
 	margin-right: auto;
 	//padding: 0 150px;
+
+	@include at-most($screen-md-max) {
+		width: 90%;
+	}
 }
 
 .search-ctn {
