--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -59,7 +59,12 @@
 
 			.record-action-control {
 				cursor: pointer;
-				padding: 5px 0px;
+				// padding: 5px 0px;
+				padding: 0 10px;
+
+				i {
+					margin: 0;
+				}
 			}
 
 			.record-actions-group {
