Lighter table borders

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -53,6 +53,7 @@ $records-width: 350px;
 	$color-background-dark_hover: $blue23;
 
 	$color-border-dark: $blue23;
+	$color-border-light: $gray93;
 
 	$color-text-primary: $gray45;
 	$color-text-secondary: $white;
