--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -26,16 +26,16 @@
 
 	th, td {
 		text-align: left;
-		border-bottom: 1px solid $gray86;
-		border-top: 1px solid $gray86;
+		border-bottom: 1px solid $color-border-light;
+		border-top: 1px solid $color-border-light;
 		background: $white;
 
 		&:first-child {
-			border-left: 1px solid $gray86;
+			border-left: 1px solid $color-border-light;
 		}
 
 		&:last-child {
-			border-right: 1px solid $gray86;
+			border-right: 1px solid $color-border-light;
 		}
 	}
 
@@ -276,7 +276,7 @@
 		.mobile-cell {
 			padding: 20px 20px 20px 50%;
 			position: relative;
-			border-bottom: 1px solid $gray86;
+			border-bottom: 1px solid $color-border-light;
 
 			&:after {
 				position: absolute;
