--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -28,7 +28,6 @@
 		text-align: left;
 		border-bottom: 1px solid $color-border-light;
 		border-top: 1px solid $color-border-light;
-		background: $white;
 
 		&:first-child {
 			border-left: 1px solid $color-border-light;
@@ -41,11 +40,13 @@
 
 	th {
 		padding: 10px 20px;
+		background: $gray90;
 	}
 
 	td {
 		padding: 20px;
 		vertical-align: middle;
+		background: $white;
 	}
 
 	.interactions {
