Font weight for label and titles

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -63,7 +63,7 @@ li.react-autosuggest__suggestion--focused {
 
 .field-label {
 	padding-top: 10px;
-	font-weight: $font-weight-bold;
+	font-weight: $font-weight-normal;
 	text-align: right;
 
 	label {
