Bold -> semi-bold

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -32,7 +32,7 @@
 		padding: 40px 25px;
 		background: url(../img/user-bg.jpg) bottom right no-repeat;
 		background-size: cover;
-		font-weight: $font-weight-bold;
+		font-weight: $font-weight-semibold;
 
 		img {
 			border-radius: 100%;
