--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -287,7 +287,7 @@
 				width: 40%;
 				display: block;
 				content: attr(data-field-label);
-				font-weight: $font-weight-bold;
+				font-weight: $font-weight-semibold;
 			}
 		}
 
