--- a/src/scss/components/_loaded-records.scss
+++ b/src/scss/components/_loaded-records.scss
@@ -27,6 +27,7 @@
 	}
 
 	h2 {
+		margin-top: 20px;
 		margin-bottom: 30px;
 	}
 
@@ -35,6 +36,11 @@
 		padding-bottom: 10px;
 		margin-bottom: 20px;
 		border-bottom: 1px solid $blue37;
+	}
+	.loaded-records-toggler {
+		position:absolute;
+			top:20px;
+			right:20px;
 	}
 }
 
