header fixe wip

--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -3,7 +3,8 @@
 	position: relative;
 	overflow: hidden;
 
-	> header {
+	> header,
+	.fixed-header > header {
 		padding: 25px 40px;
 		background: $color-background-light;
 		border-top: 1px solid $gray86;
