--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -18,6 +18,12 @@
 	width: 100%;
 	margin-top: 20px;
 
+	.group-heading {
+		td {
+			background: $gray97;
+		}
+	}
+
 	tr:hover {
 		td {
 			background: $gray97;
