--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -62,6 +62,15 @@ li.react-autosuggest__suggestion--focused {
 	color: $white;
 }
 
+.color-preview {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	vertical-align: middle;
+	border: 1px solid #000;
+	margin-right: 6px;
+}
+
 .field-description {
 	display: block;
 	margin-bottom: 10px;
