--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -153,7 +153,7 @@ li.react-autosuggest__suggestion--focused {
 
 			position: absolute;
 				top: 50%;
-				right: 2.5px;
+				left: 2.5px;
 
 			transform: translate(0, -50%);
 		}
