thumbnails des img bank de srcset

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,7 +28,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/home-button";
 @import "components/list-records";
 @import "components/pagination";
-@import "components/bank-image-list";
+@import "components/bank-image";
 @import "components/_react-datepicker";
 @import "components/_login";
 
