--- a/src/scss/components/_bank-image.scss
+++ b/src/scss/components/_bank-image.scss
@@ -31,15 +31,43 @@
 	}
 }
 
+
+
+//thumbnail d'un input de bank image (placé dans input type bank_img)
+.bank-image-input-thumbnail {
+	.bank-image-thumbnail {
+		display: inline-block;
+		margin-right: 20px;
+		margin-bottom: 20px;
+		width: 300px;
+		img {
+			max-width: 100%;
+			max-height: 300px;
+		}
+	}
+}
+
+
+//thumbnail dans la liste des images de banque quand on ouvre le popin "select...". Largeur dépend de la grille
 .bank-image-list-item {
-	.thumbnail-bg {
+
+	//le thumbnail lui-même (div contenant l'image avec srcset)
+	.bank-image-thumbnail {
 		width: 100%;
 		height: 0;
+		margin: 0;
 		padding-top: 100%;
-
-		background-position: center center;
-		background-size: cover;
+		position:relative;
 		background-color: $color-background-main;
+
+		img {
+			max-width: 100%;
+			max-height: 100%;
+			position:absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
 	}
 
 	.label, .size {
@@ -62,3 +90,4 @@
 		margin-top: 50px;
 	}
 }
+
