updated autocomplete added styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/bank-image";
 @import "components/_react-datepicker";
 @import "components/_login";
+@import "components/_autosuggest";
 
 @import "layout/_default";
 
