--- a/src/scss/components/_loaded-records.scss
+++ b/src/scss/components/_loaded-records.scss
@@ -5,7 +5,7 @@
 		top: $header-height;
 		right: 0;
 
-	height: 100vh;
+	height: calc(100vh - 60px);
 	width: $records-width;
 	padding: 40px 35px;
 	overflow: auto;
@@ -20,6 +20,7 @@
 		position: fixed;
 			top: 0;
 			right: 0;
+		height: 100vh;
 	}
 
 	&.collapsed {
