--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -99,6 +99,10 @@
 	@include button-color-modifier($blue37);
 }
 
+%lighter_button {
+	@include button-color-modifier(mix($white, $color-accent-primary, 50%));
+}
+
 %faded_button {
 	@include button-color-modifier($gray86);
 }
@@ -153,6 +157,10 @@
 
 	&[class*=-debug], &[class*=-faded] {
 		@extend %faded_button;
+	}
+
+	&[class*=-lighter] {
+		@extend %lighter_button;
 	}
 
 	&[class*=fw] {
