--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/list-records";
 @import "components/pagination";
 @import "components/bank-image";
+@import "components/url-modal";
 @import "components/_react-datepicker";
 @import "components/_login";
 @import "components/_autosuggest";
