--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -57,8 +57,6 @@ textarea{
 	}
 }
 
-
-
 .color-preview {
 	display: inline-block;
 	width: 10px;
@@ -71,6 +69,7 @@ textarea{
 .field-description {
 	display: block;
 	margin-bottom: 10px;
+	font-size: 12px;
 }
 
 .field-label {
@@ -245,7 +244,6 @@ textarea{
 	}
 }
 
-
 .file-input-input {
 	display: inline-block;
 	vertical-align: bottom;
@@ -258,4 +256,18 @@ textarea{
 	[class^=button] {
 		margin-right: 10px
 	}
+}
+
+.file-input-generic {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 10px;
+
+	.file-input-section {
+		padding-bottom: 0;
+	}
+}
+
+.bank-image-input-thumbnail {
+	margin-bottom: 10px;
 }
