Comments in Bank Image Popup

--- a/src/scss/components/_bank-image.scss
+++ b/src/scss/components/_bank-image.scss
@@ -84,11 +84,11 @@
 		}
 	}
 
-	.label, .size {
+	.label, .size, .comments {
 		margin: 10px 0;
 	}
 
-	.size {
+	.size, .comments {
 		font-size: 12px;
 	}
 
