--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -92,7 +92,7 @@
 			font-size: 12px;
 			color: rgba($white, 0.85);
 
-			.nrecords {
+			.nrecords, .flag {
 				display: block;
 				text-align: center;
 				position: absolute;
@@ -102,13 +102,22 @@
 				width: 40px;
 				height: 100%;
 
-				.n {
+				span {
 					position: absolute;
 						top: 50%;
 						left: 0;
-
+					// height: 16px;
+					// border-radius: 16px;
+					// background: red;
 					width: 100%;
 					transform: translate(0, -50%);
+
+					&.info {
+
+					}
+					&.success {
+						color: $teal62;
+					}
 				}
 			}
 
