--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/_react-datepicker";
 @import "components/_login";
 @import "components/_autosuggest";
+@import "components/_process-record";
 
 @import "layout/_default";
 
