--- a/src/scss/components/_subform.scss
+++ b/src/scss/components/_subform.scss
@@ -138,10 +138,14 @@
 		}
 	}
 
-	> .add-record {
+	.add-record {
 		float: right;
 
 		@extend %base_button;
 		@extend %round_button;
+
+		i {
+			margin: 0;
+		}
 	}
 }
