--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/_login";
 @import "components/_autosuggest";
 @import "components/_process-record";
+@import "components/_dashboard";
 
 @import "layout/_default";
 
