--- a/src/scss/components/_bank.scss
+++ b/src/scss/components/_bank.scss
@@ -22,6 +22,14 @@
 	}
 }
 
+.bank-image-list {
+	transform: translate(0); // fixes nested fixed header
+
+	header.light {
+		display: none;
+	}
+}
+
 .bank-image-list, .bank-file-list {
 	padding: 0 $grid-gutter-width/2;
 	
@@ -99,6 +107,10 @@
 
 	.size, .comments, .filename {
 		font-size: 12px;
+	}
+
+	[class|=button] {
+		padding: 0 14px;
 	}
 
 	[class|=button] + [class|=button] {
