--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/_autosuggest";
 @import "components/_process-record";
 @import "components/_dashboard";
+@import "components/_list-search";
 
 @import "layout/_default";
 
