Sources + social networks

--- a/src/scss/components/_dashboard.scss
+++ b/src/scss/components/_dashboard.scss
@@ -243,7 +243,8 @@
 			margin-top: 40px;
 
 			.name {
-				width: 110px;
+				flex: 0 0 120px;
+				text-transform: capitalize;
 			}
 
 			.line {
