Custom classes for each browser

--- a/src/scss/components/_dashboard.scss
+++ b/src/scss/components/_dashboard.scss
@@ -186,6 +186,14 @@
 			&.firefox {
 				background: #e66000;
 			}
+			
+			&.edge {
+				background: #016ac6;
+			}
+
+			&.internet-explorer {
+				background: #20beee;
+			}
 		}
 	}
 
