Tightened list rows, fix checkbox

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -134,7 +134,7 @@ textarea{
 			color: $color-accent-primary;
 
 			position: absolute;
-				top: 50%;
+				top: 9px;
 				left: 2.5px;
 
 			transform: translate(0, -50%);
