--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -162,18 +162,32 @@ textarea{
 				left: 7.5px;
 			}
 		}
+
+		.list-records & {
+			&:checked + .toggle {
+				&:after {
+					left: calc(100% - 16px);
+				}
+
+				&:before {
+					content: attr(data-on-label);
+					left: 6px;
+				}
+			}
+		}
 	}
 }
 
 .toggle {
+
 	cursor: pointer;
 
 	position: relative;
 	display: block;
 	width: 0;
 	height: 34px;
-
 	padding: 0 35px;
+
 	margin: 10px 0;
 
 	border-radius: 22px;
@@ -206,6 +220,34 @@ textarea{
 
 		line-height: 30px;
 	}
+
+	.list-records & {
+		height: 22px;
+		padding: 0 23px;
+		border-radius: 11px;
+		font-size: 0.9em;
+
+		&:after {
+			top: 1px;
+			left: 1px;
+
+			height: 16px;
+			width: 16px;
+		}
+
+		&:before {
+			content: attr(data-off-label);
+			color: $white;
+
+			position: absolute;
+				top: 0;
+				right: 5px;
+
+			line-height: 19px;
+		}
+
+	}
+
 }
 
 .file-infos {
