save temp record, load slug with action

--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -46,6 +46,13 @@
 		.texts {
 			padding-right: 30px;
 		}
+		
+		.permalinks {
+			span {
+				font-weight: bold;
+				text-transform: uppercase;
+			}
+		}
 
 		.last-modif-date {
 			margin-top: 20px;
