--- a/src/scss/base/_texts.scss
+++ b/src/scss/base/_texts.scss
@@ -24,6 +24,14 @@
 	font-weight: $font-weight-extrabold;
 }
 
+%title4 {
+	@extend %title;
+	font-size: 16px;
+	margin: 10px 0 6px;
+	font-weight: $font-weight-bold;
+	
+}
+
 %text_default {
 	font-size: 14px;
 }
@@ -44,6 +52,10 @@ h2 {
 
 h3 {
 	@extend %title3;
+}
+
+h4 {
+	@extend %title4;
 }
 
 em {
