--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/_process-record";
 @import "components/_dashboard";
 @import "components/_list-search";
+@import "components/_hotspot";
 
 @import "layout/_default";
 
