--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -150,6 +150,10 @@
 				background: darken($color-background-main, 10%);
 				margin: 10px -10px;
 				padding: 10px;
+
+				div + div {
+					margin-top: 10px;
+				}
 			}
 
 			&.red {
