--- a/src/scss/components/_subform.scss
+++ b/src/scss/components/_subform.scss
@@ -1,16 +1,16 @@
 .single-record {
 	position: relative;
-	padding-top: 60px;
+	padding-top: 40px;
 	padding-bottom: 1px;
 
 	h2 {
 		font-weight: $font-weight-semibold;
 	}
 
-	.button-circle-danger-small {
-		position: absolute;
-			top: 20px;
-			right: 0;
+
+	.close-row {
+		text-align: right;
+		margin-bottom: 20px;
 	}
 
 	h2:nth-of-type(n+2) {
@@ -18,7 +18,23 @@
 		padding-top: 40px;
 		border-top: 1px solid $gray86;
 	}
+
+	.sidebar {
+		padding: 30px;
+		background: $color-background-dark;
+		color: $white;
+
+		textarea,
+		input[type="text"],
+		input[type="search"],
+		input[type="password"],
+		input[type="email"],
+		input[role="combobox"] {
+			color: $color-text-primary;
+		}
+	}
 }
+
 
 
 .subform {
