Nav items are higher than nav-groups

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -125,6 +125,7 @@
 
 	.nav-item {
 		padding: 0;
+		border-top: 1px solid rgba(0,0,0,.1);
 
 		a {
 			display: block;
@@ -196,7 +197,7 @@
 				border-left: 0;
 
 				.nav-item {
-					border-top: 1px solid rgba(0,0,0,0.1); 
+					//border-top: 1px solid rgba(0,0,0,0.1); 
 
 					a {
 						border-left: 0;
