--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -77,6 +77,22 @@ textarea{
 	}
 }
 
+.translation {
+	border-bottom: 1px $gray76 solid;
+	padding: 0.3em;
+}
+
+.translation-label {
+	font-weight: bold;
+	margin-bottom: 5px;
+	font-size: 1.1em;
+	.key {
+		font-weight:normal;
+		font-size: 0.8em;
+		margin-left: 2em;
+	}
+}
+
 .field-label {
 	padding-top: 10px;
 	margin-bottom: 10px;
