--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -108,7 +108,7 @@
 				vertical-align: middle;
 
 				color: $color-accent-primary;
-				background: $white;
+				background: $color-background-main;
 
 				height: 30px;
 				line-height: 30px;
@@ -137,7 +137,7 @@
 	}
 
 	> .single-record {
-		width: 1200 / 1655 * 100%;
+		width: 1400 / 1655 * 100%;
 		margin-left: auto;
 		margin-right: auto;
 	}
