--- a/src/scss/base/_texts.scss
+++ b/src/scss/base/_texts.scss
@@ -36,6 +36,13 @@
 	font-size: 14px;
 }
 
+%text_medium {
+	font-size: 11px;
+}
+%text_small {
+	font-size: 9px;
+}
+
 
 body {
 	color: $color-text-primary;
