--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,5 +1,5 @@
 
-.field {
+.field, .form-group {
 
 	margin-bottom: 0.7em;
 
@@ -126,6 +126,15 @@
 .translation {
 	border-bottom: 1px $gray76 solid;
 	padding: 0.3em;
+	.field {
+		.field-label {
+			label {
+				font-size: 0.8em;
+				text-align: right;
+				padding:0;
+			}
+		}
+	}
 }
 
 .translation-label {
@@ -139,6 +148,9 @@
 	}
 }
 
+.translation-schema-form {
+	background:rgba(149, 197, 154, 0.5);
+}
 
 .single-record {
 	position: relative;
