--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/_dashboard";
 @import "components/_list-search";
 @import "components/_hotspot";
+@import "components/_field-deps";
 
 @import "layout/_default";
 
